--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,12 +103,12 @@ jobs:
       - name: Verify with Maven
         run: mvn clean verify
 
-      - name: move files
+      - name: Copy files
         run:
-          cp org.flickit.dsl.editor.v2.repository/target/repository/*.jar . &&
-          cp -r org.flickit.dsl.editor.v2.repository/target/repository/plugins . &&
-          cp -r org.flickit.dsl.editor.v2.repository/target/repository/features . &&
-          cp org.flickit.dsl.editor.v2.repository/category.xml .
+          cp -r org.flickit.dsl.editor.v2.repository/category.xml \
+          org.flickit.dsl.editor.v2.repository/target/repository/*.jar \
+          org.flickit.dsl.editor.v2.repository/target/repository/plugins \
+          org.flickit.dsl.editor.v2.repository/target/repository/features .
 
       - name: Upload archive
         uses: actions/upload-artifact@v3
@@ -117,7 +117,7 @@ jobs:
           path: |
             plugins
             features
-            artifact.jar
+            artifacts.jar
             content.jar
             category.xml
         env:
