--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,6 +157,8 @@ jobs:
     needs: [ build ]
     name: upload update site
     runs-on: ubuntu-latest
+    permissions:
+      write-all
     if: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) }}
 
     steps:
@@ -186,13 +188,32 @@ jobs:
         run:
           cp org.flickit.dsl.editor.v2.repository/category.xml org.flickit.dsl.editor.v2.repository/target/repository/ &&
           cd org.flickit.dsl.editor.v2.repository/target/repository/ &&
-          zip -r update-${{ steps.project.outputs.version }}.zip features plugins artifacts.jar content.jar category.xml &&
-          mv update-${{ steps.project.outputs.version }}.zip ../../../
+          zip -r update-v${{ steps.project.outputs.version }}.zip features plugins artifacts.jar content.jar category.xml &&
+          mv update-v${{ steps.project.outputs.version }}.zip ../../../
 
       - name: Upload archive
         uses: ncipollo/release-action@v1.12.0
         with:
-          artifacts: update-${{ steps.project.outputs.version }}.zip
+          artifacts: update-v${{ steps.project.outputs.version }}.zip
           token: ${{ secrets.GH_PACKAGES_TOKEN }}
           tag: v${{ steps.project.outputs.version }}
           allowUpdates: true
+
+      - name: Update readme download button
+        env:
+          GITHUB_USER: "avansoft"
+          REPO: "flickit-dsl-editor"
+          FORMAT: "zip"
+          VERSION: "v${{ steps.project.outputs.version }}"
+          COLOR: "blue"
+          BEGIN_TAG: "<!-- BEGIN LATEST UPDATE SITE DOWNLOAD BUTTON -->"
+          END_TAG: "<!-- END LATEST UPDATE SITE DOWNLOAD BUTTON -->"
+        run: |
+          UPDATE=$(cat README.md | perl -0777 -pe 's#(${{ env.BEGIN_TAG }})(?:.|\n)*?(${{ env.END_TAG }})#${1}\n[![Download ${{ env.FORMAT }}](https://custom-icon-badges.demolab.com/badge/-Download-${{ env.COLOR }}?style=for-the-badge&logo=download&logoColor=white "Download ${{ env.FORMAT }}")](https://github.com/${{ env.GITHUB_USER }}/${{ env.REPO }}/releases/download/${{ env.VERSION }}/update-${{ env.VERSION }}.${{ env.FORMAT }})\n${2}#g')
+          echo "${UPDATE}" > README.md
+
+      - name: Commit readme file changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: README.md
+          message: "Update update-site download link on README.me file"
