--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -158,8 +158,9 @@ jobs:
     name: upload update site
     runs-on: ubuntu-latest
     permissions:
-      write-all
-    if: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) }}
+      contents: write
+      packages: write
+#    if: ${{ (github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')) }}
 
     steps:
       - name: Checkout Repository
@@ -191,20 +192,20 @@ jobs:
           zip -r update-v${{ steps.project.outputs.version }}.zip features plugins artifacts.jar content.jar category.xml &&
           mv update-v${{ steps.project.outputs.version }}.zip ../../../
 
-      - name: Upload archive
-        uses: ncipollo/release-action@v1.12.0
-        with:
-          artifacts: update-v${{ steps.project.outputs.version }}.zip
-          token: ${{ secrets.GH_PACKAGES_TOKEN }}
-          tag: v${{ steps.project.outputs.version }}
-          allowUpdates: true
+#      - name: Upload archive
+#        uses: ncipollo/release-action@v1.12.0
+#        with:
+#          artifacts: update-v${{ steps.project.outputs.version }}.zip
+#          token: ${{ secrets.GH_PACKAGES_TOKEN }}
+#          tag: v${{ steps.project.outputs.version }}
+#          allowUpdates: true
 
       - name: Update readme download button
         env:
           GITHUB_USER: "avansoft"
           REPO: "flickit-dsl-editor"
           FORMAT: "zip"
-          VERSION: "v${{ steps.project.outputs.version }}"
+          VERSION: "2.3.0"
           COLOR: "blue"
           BEGIN_TAG: "<!-- BEGIN LATEST UPDATE SITE DOWNLOAD BUTTON -->"
           END_TAG: "<!-- END LATEST UPDATE SITE DOWNLOAD BUTTON -->"
