--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -213,18 +213,12 @@ jobs:
           UPDATE=$(cat README.md | perl -0777 -pe 's#(${{ env.BEGIN_TAG }})(?:.|\n)*?(${{ env.END_TAG }})#${1}\n[![Download ${{ env.FORMAT }}](https://custom-icon-badges.demolab.com/badge/-Download-${{ env.COLOR }}?style=for-the-badge&logo=download&logoColor=white "Download ${{ env.FORMAT }}")](https://github.com/${{ env.GITHUB_USER }}/${{ env.REPO }}/releases/download/${{ env.VERSION }}/update-${{ env.VERSION }}.${{ env.FORMAT }})\n${2}#g')
           echo "${UPDATE}" > README.md
 
-      - name: Extract branch name
-        shell: bash
-        run: echo "branch=${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}}" >> $GITHUB_OUTPUT
-        id: extract_branch
-
-      - name: setup git config
+      - uses: actions/checkout@v3
+      - name: Commit report
         run: |
-          git config user.name "GitHub Actions Bot"
-          git config user.email "<>"
-
-      - name: commit
-        run: |
-          git add README.md
-          git commit -m "Update update-site download link on README.me file"
-          git push origin ${{ steps.extract_branch.outputs.branch }}
+          git config --global user.name 'avansoft'
+          git config --global user.email 'avansoft@users.noreply.github.com'
+          git commit -am "Update update-site download link on README.me file"
+          git push
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
