--- a/org.flickit.dsl.editor.v2.feature/pom.xml
+++ b/org.flickit.dsl.editor.v2.feature/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.flickit.dsl.editor</groupId>
 		<artifactId>org.flickit.dsl.editor.v2.parent</artifactId>
-		<version>2.6.0</version>
+		<version>2.6.1-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.flickit.dsl.editor.v2.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
