--- a/org.flickit.dsl.editor.v2/pom.xml
+++ b/org.flickit.dsl.editor.v2/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.flickit.dsl.editor</groupId>
 		<artifactId>org.flickit.dsl.editor.v2.parent</artifactId>
-		<version>2.6.1-SNAPSHOT</version>
+		<version>2.6.0</version>
 	</parent>
 	<artifactId>org.flickit.dsl.editor.v2</artifactId>
 	<packaging>eclipse-plugin</packaging>
