--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<maven.compiler.source>17</maven.compiler.source>
 		<maven.compiler.target>17</maven.compiler.target>
 		<!-- Tycho settings -->
-		<tycho-version>2.7.5</tycho-version>
+		<tycho-version>3.0.4</tycho-version>
 		<!-- Define overridable properties for tycho-surefire-plugin -->
 		<platformSystemProperties></platformSystemProperties>
 		<moduleProperties></moduleProperties>
@@ -145,6 +145,10 @@
 					</dependency-resolution>
 				</configuration>
 			</plugin>
+			<plugin>
+		        <groupId>org.eclipse.tycho</groupId>
+		        <artifactId>tycho-versions-plugin</artifactId>
+	      	</plugin>
 		</plugins>
 		<pluginManagement>
 			<plugins>
@@ -248,6 +252,11 @@
 					<artifactId>tycho-p2-director-plugin</artifactId>
 					<version>${tycho-version}</version>
 				</plugin>
+				<plugin>
+		          <groupId>org.eclipse.tycho</groupId>
+		          <artifactId>tycho-versions-plugin</artifactId>
+		          <version>${tycho-version}</version>
+		        </plugin>
 			</plugins>
 		</pluginManagement>
 	</build>
